--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JSX engine for ExpressJS",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha -R spec"
+    "test": "ln -sfn ../ ./node_modules/express-engine-jsx && rm -rf tests/cache/ && NODE_ENV=production ./node_modules/.bin/mocha -R spec tests"
   },
   "repository": {
     "type": "git",
@@ -24,15 +24,16 @@
   "homepage": "https://github.com/redexp/express-engine-jsx#readme",
   "dependencies": {
     "babel-core": "^6.26.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-template": "^6.26.0",
     "babel-traverse": "^6.26.0",
     "babel-types": "^6.26.0",
     "babylon": "^6.18.0",
+    "mocha": "^4.0.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "mocha": "^4.0.1"
+    "chai": "^4.1.2"
   }
 }
