--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-engine-jsx",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "description": "JSX engine for ExpressJS",
   "main": "index.js",
   "scripts": {
@@ -29,11 +29,13 @@
     "babel-traverse": "^6.26.0",
     "babel-types": "^6.26.0",
     "babylon": "^6.18.0",
-    "mocha": "^4.0.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react": "*",
+    "react-dom": "*",
+    "create-react-class": "*",
+    "prop-types": "*"
   },
   "devDependencies": {
+    "mocha": "^4.0.1",
     "chai": "^4.1.2"
   }
 }
