--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-engine-jsx",
-  "version": "2.1.0",
+  "version": "3.0.0",
   "description": "JSX engine for ExpressJS",
   "main": "index.js",
   "types": "index.d.ts",
@@ -32,6 +32,9 @@
     "@babel/types": "^7.12.13"
   },
   "devDependencies": {
+    "@types/babylon": "^6.16.5",
+    "@types/node": "^14.14.28",
+    "@types/react": "^17.0.2",
     "chai": "^4.3.0",
     "mocha": "^8.3.0"
   },
