--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "express-engine-jsx",
-  "version": "3.1.0",
+  "version": "3.2.0",
   "description": "JSX engine for ExpressJS",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
-    "test": "NODE_ENV=production ./node_modules/.bin/mocha -R spec tests"
+    "test": "NODE_ENV=production ./node_modules/.bin/mocha -R spec tests",
+    "peer": "npm i react react-dom --no-save"
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,8 @@
     "@babel/plugin-transform-react-jsx": "^7.12.16",
     "@babel/template": "^7.12.13",
     "@babel/traverse": "^7.12.13",
-    "@babel/types": "^7.12.13"
+    "@babel/types": "^7.12.13",
+    "callsites": "^3.1.0"
   },
   "devDependencies": {
     "@types/babylon": "^6.16.5",
