--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-engine-jsx",
-  "version": "3.2.0",
+  "version": "3.3.0",
   "description": "JSX engine for ExpressJS",
   "main": "index.js",
   "types": "index.d.ts",
@@ -31,7 +31,8 @@
     "@babel/template": "^7.12.13",
     "@babel/traverse": "^7.12.13",
     "@babel/types": "^7.12.13",
-    "callsites": "^3.1.0"
+    "callsites": "^3.1.0",
+    "source-map-sync": "^0.8.0-beta.2"
   },
   "devDependencies": {
     "@types/babylon": "^6.16.5",
