--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "express-engine-jsx",
-  "version": "3.3.0",
+  "version": "3.4.0",
   "description": "JSX engine for ExpressJS",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
-    "test": "NODE_ENV=production ./node_modules/.bin/mocha -R spec tests",
-    "peer": "npm i react react-dom --no-save"
+    "test": "mocha -R spec tests"
   },
   "repository": {
     "type": "git",
@@ -15,6 +14,7 @@
   "keywords": [
     "express",
     "engine",
+    "templater",
     "jsx",
     "react"
   ],
@@ -25,21 +25,23 @@
   },
   "homepage": "https://github.com/redexp/express-engine-jsx#readme",
   "dependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/parser": "^7.12.16",
-    "@babel/plugin-transform-react-jsx": "^7.12.16",
+    "@babel/core": "^7.13.15",
+    "@babel/parser": "^7.13.15",
+    "@babel/plugin-transform-modules-commonjs": "^7.13.8",
+    "@babel/plugin-transform-react-jsx": "^7.13.12",
     "@babel/template": "^7.12.13",
-    "@babel/traverse": "^7.12.13",
-    "@babel/types": "^7.12.13",
+    "@babel/types": "^7.13.14",
     "callsites": "^3.1.0",
     "source-map-sync": "^0.8.0-beta.2"
   },
   "devDependencies": {
     "@types/babylon": "^6.16.5",
-    "@types/node": "^14.14.28",
-    "@types/react": "^17.0.2",
-    "chai": "^4.3.0",
-    "mocha": "^8.3.0"
+    "@types/node": "^14.14.41",
+    "@types/react": "^17.0.3",
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2",
+    "react": ">=16.8",
+    "react-dom": ">=16.6"
   },
   "peerDependencies": {
     "react": ">=16.8",
