--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-engine-jsx",
-  "version": "3.4.3",
+  "version": "3.5.0",
   "description": "JSX engine for ExpressJS",
   "main": "index.js",
   "types": "index.d.ts",
@@ -25,23 +25,24 @@
   },
   "homepage": "https://github.com/redexp/express-engine-jsx#readme",
   "dependencies": {
-    "@babel/core": "^7.17.5",
-    "@babel/parser": "^7.17.3",
-    "@babel/plugin-transform-modules-commonjs": "^7.16.8",
-    "@babel/plugin-transform-react-jsx": "^7.17.3",
-    "@babel/template": "^7.16.7",
-    "@babel/types": "^7.17.0",
+    "@babel/core": "^7.21.3",
+    "@babel/parser": "^7.21.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.21.2",
+    "@babel/plugin-transform-react-jsx": "^7.21.0",
+    "@babel/template": "^7.20.7",
+    "@babel/types": "^7.21.3",
     "callsites": "^3.1.0",
+    "combined-stream": "^1.0.8",
     "source-map-sync": "^0.8.0-beta.2"
   },
   "devDependencies": {
     "@types/babylon": "^6.16.6",
-    "@types/node": "^17.0.20",
-    "@types/react": "^17.0.39",
-    "chai": "^4.3.6",
-    "mocha": "^9.2.1",
-    "react": ">=16.8",
-    "react-dom": ">=16.6"
+    "@types/node": "^17.0.45",
+    "@types/react": "^17.0.55",
+    "chai": "^4.3.7",
+    "mocha": "^9.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "peerDependencies": {
     "react": ">=16.8",
